--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
     "mongoose": "^8.3.3",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
